fixed project padding on mobile

--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -1,5 +1,5 @@
 .project {
-    padding: 2rem 10%;
+    padding: 2rem 0;
     display: flex;
     flex-direction: column;
 }
